syntax = "proto3";

package order;
option go_package = "order-service/internal/delivery/grpc/proto";

import "google/protobuf/timestamp.proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

message Item {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message Order {
  string order_id = 1;
  string user_id = 2;
  repeated Item items = 3;
  double total_amount = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated Item items = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  Order order = 1;
}